--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-paypal",
+  "name": "react-native-paypal-lib",
   "version": "1.0.0",
   "description": "A wrapper for the paypal sdk for both android and ios.",
   "main": "index.js",
